[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pawk"
version = "0.8.0"
authors = [{ name = "Alec Thomas", email = "alec@swapoff.org" }]
description = "PAWK - A Python line processor (like AWK)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alecthomas/pawk"
"Bug Tracker" = "https://github.com/alecthomas/pawk/issues"
