[tool.poetry]
name = "pawk"
version = "0.8.0"
authors = ["Alec Thomas <alec@swapoff.org>"]
description = "PAWK - A Python line processor (like AWK)"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alecthomas/pawk"
repository = "http://github.com/alecthomas/pawk"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/alecthomas/pawk/issues"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
knotr = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
